--- a/css/styles.css
+++ b/css/styles.css
@@ -80,8 +80,6 @@ span.header-logo:focus{
     color: var(--accent-color);
 }
 .header-nav{
-    padding-top: 24px;
-    padding-bottom: 25px;
     margin-left: 93px;
     margin-right: auto;
 }
@@ -98,6 +96,8 @@ span.header-logo:focus{
     letter-spacing: 0.02em;
     color: #212121;
     cursor: pointer;
+    padding-top: 24px;
+    padding-bottom: 25px;
 }
 .header-link:hover,
 .header-link:focus{
@@ -259,10 +259,8 @@ span.header-logo:focus{
 }
 
 .team-inform{
-    padding: 30px 70px;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+    text-align: center;
+    padding: 30px 0px;
 }
 
 .headline{
@@ -343,6 +341,9 @@ span.footer-logo:focus {
     justify-content: center;
     margin-bottom: 50px;
 }
+.button-element{
+    margin-right: 8px;
+}
 
 .portfolio-btn {
     font-family: inherit;
@@ -357,7 +358,6 @@ span.footer-logo:focus {
     border: none;
     border-radius: 4px;
     padding: 6px 22px;
-    margin-right: 8px;
 }
 
 
